--- a/CourtApp.Web/Areas/Client/Views/ManageClient/Index.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/Index.cshtml
@@ -4,11 +4,7 @@
 }
 @model CourtApp.Web.Areas.Client.Model.GClientViewModel
 <div class="card">
-    <div class="col-sm-12" style="padding:20px">
-      @* 
-        <a asp-area="Client" asp-controller="ManageClient" asp-action="CreateOrUpdate" class="btn bg-success">
-            <i class="fa fa-plus-square"></i> Create
-        </a> *@
+    <div class="col-sm-12" style="padding:20px">     
         <a onclick="jQueryModalGet('/client/manageclient/CreateOrEdit','Add Client')" class="btn btn-outline-success">
             <i class="fa fa-plus-square"></i> &nbsp;Add
         </a>
@@ -22,7 +18,7 @@
 </div>
 @section Scripts
 {
-    <script src="~/js/site.js"></script>
+    @* <script src="~/js/site.js"></script> *@
     <script>
         function loadData() {
             $('#viewAll').load('/Client/ManageClient/LoadAll');
