--- a/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
@@ -85,14 +85,14 @@
             <div class="form-group row">
                 <label class="col-md-2 col-form-label">@localizer["Mobile"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-4">
-                    <input type="tel" placeholder="Please enter mobile"
+                    <input type="tel" placeholder="Please enter mobile" oninput="restrictInput(event)"
                            asp-for="Mobile" class="form-control" maxlength="10" />
                     <span asp-validation-for="Mobile" class="text-danger"></span>
                 </div>
                 <label class="col-md-2 col-form-label">@localizer["Office No"]</label>
                 <div class="col-md-4">
-                    <input type="tel" placeholder="Please enter phone"
-                           asp-for="Phone" class="form-control" />                    
+                    <input type="tel" placeholder="Please enter phone" oninput="restrictInput(event)"
+                           asp-for="Phone" class="form-control" pattern="^\+?[1-9]\d{1,14}$" />
                 </div>                
             </div>
 
@@ -117,7 +117,7 @@
                     <div id="suggestions" class="suggestions-box" style="display: none; position: absolute; border: 1px solid #ddd; max-height: 150px; overflow-y: auto; background: #fff; width: 200px; z-index: 1000;"></div>
                     <span asp-validation-for="ReferalBy" class="text-danger"></span>
                 </div>     
-                <label class="col-md-2 col-form-label">@localizer["Reg. No"]</label>
+                <label class="col-md-2 col-form-label" id="RegNoLabel">@localizer["Reg. No"]</label>
                 <div class="col-md-4">
                     <input type="text" placeholder="Please enter registration number"
                            asp-for="RegNo" class="form-control" />
@@ -153,7 +153,9 @@
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
-
+<script type="text/javascript" language=javascript>
+    $.validator.unobtrusive.parse(document);
+</script>
 <script src="~/js/client.js"></script>
 
 
