--- a/CourtApp.Web/Areas/Client/Views/ManageClient/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/_ViewAll.cshtml
@@ -3,10 +3,11 @@
     <thead>
         <tr>
             <th style="width:5%">Sno.</th>
-            <th style="width:25%">Client Type</th>
+            <th style="width:10%">Type</th>
             <th style="width:45%">Name</th>
             <th style="width:10%">Mobile</th>
             <th style="width:10%">Email</th>            
+            <th style="width:15%">Refer By</th>            
             @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Delete)).Result.Succeeded ||
             (AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Edit)).Result.Succeeded)
             {
@@ -35,7 +36,10 @@
                 </td>
                 <td>
                     @bt.Email
-                </td>               
+                </td>  
+                <td>
+                    @bt.ReferalBy
+                </td>  
 
                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Delete)).Result.Succeeded ||
                (AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Edit)).Result.Succeeded)
