--- a/CourtApp.Web/Areas/LawyerDiary/Views/TypeOfCases/_Create.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/TypeOfCases/_Create.cshtml
@@ -26,7 +26,7 @@
     @* <partial name="_StatusMessage" model="@Model.Message" /> *@
     <div class="row">
         <div class="col-md-12">
-            @if (@Model.Message != null)
+            @if (Model.Message != null)
             {
                 <div class="form-group row">
                     <partial name="_StatusMessage" model="@Model.Message" />
