--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = localizer["Add New Case"];
+    ViewData["Title"] = localizer[ViewBag.Title + " Case Detail"];
     ViewData["PopupTitle"] = localizer["Select Case information for copying data"];
     ViewData["Text"] = "Bring Case";
     ViewData["Url"] = "/LawyerDiary/Lawyer/GetCaseByLawyer";
@@ -79,7 +79,7 @@
 
                     <fieldset class="scheduler-border">
                         <legend class="scheduler-border">Case Detail Information</legend>
-                        <div class="form-group row">                            
+                        <div class="form-group row">
                             <label class="col-md-2 col-form-label">@localizer["Institution Date"] (<span style="color:red">*</span>)</label>
                             <div class="col-md-4">
                                 <div class="input-group">
@@ -292,7 +292,7 @@
                                     <input type="text" placeholder="Cnr number" asp-for="CnrNumber" name="CnrNumber" id="CnrNumber" class="form-control" />
                                 </div>
                             </div>
-                        </div>                      
+                        </div>
 
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label">@localizer["Next Date"]</label>
@@ -332,8 +332,13 @@
     <script src="~/js/litigation/managecase.js"></script>
     <script>
         $(document).ready(function () {
-            $("#hypButton").css("display", "block");
-            $("#hypRepeatButton").css("display", "block");
+            debugger;
+            var title="@(ViewBag.Title)";
+            if(title==="Add New Case Detail")
+            {
+                $("#hypButton").css("display", "block");
+                $("#hypRepeatButton").css("display", "block");
+            }
             var showHighCourt = @((bool)ViewBag.ShowHighCourt ? "true" : "false");
             var AgIsHighCourt = @((bool)ViewBag.AgIsHighCourt ? "true" : "false");
             var CaseId = "@(ViewBag.Id)";
