--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
@@ -3,7 +3,7 @@
     <thead>
         <tr>
             <th style="width:1%!important">Sno.</th>
-            <th style="width:16%!important">Reference</th>
+            <th style="width:10%!important">Reference</th>
             <th style="width:16%!important">Court</th>
             <th style="width:16%!important">Type</th>
             <th style="width:5%!important">No.</th>
@@ -73,8 +73,10 @@
                                     <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
                                 </form>
                             }
+                            @if(bt.Reference.ToLower()=="self"){
                             <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetAssignCase?CaseId=@bt.Id', 'Assigned case to other lawyer')"
                                class="dropdown-item" title="Assigned case to other lawyer"><i class="fa fa-tasks" aria-hidden="true"></i> Assigned Case</a>
+                            }
                         </div>
                     </div>
                 </td>
