--- a/CourtApp.Web/Views/Shared/_Layout.cshtml
+++ b/CourtApp.Web/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
             <partial name="AdminLTE/_ImageModal" />*@
     </div>
     <partial name="_Scripts" />
+    <partial name="_ValidationScriptsPartial" />
     @await Component.InvokeAsync("Notyf")
     @RenderSection("Scripts", required: false)
 </body>
