file handling issue fix

--- a/CourtApp.Web/Areas/Admin/Views/User/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/User/_ViewAll.cshtml
@@ -109,7 +109,7 @@
                                 </a>
                             }
                             <form id="form_delete_@user.Id" asp-area="Admin"
-                                  asp-controller="User" method="post"
+                                  asp-controller="User" method="POST"
                                   asp-action="DeleteUser"
                                   asp-route-id="@user.Id"
                                   onsubmit="return jQueryModalDelete(this)">
