--- a/CourtApp.Web/Areas/Report/Views/Register/InstitionRegister.cshtml
+++ b/CourtApp.Web/Areas/Report/Views/Register/InstitionRegister.cshtml
@@ -12,6 +12,7 @@
                         <thead>
                             <tr>
                                 <th>Sno.</th>
+                                <th>Reference</th>
                                 <th>Court.</th>
                                 <th>Type</th>
                                 <th>No</th>
