Document upload and download issue fixes. Searching issue fixes. Editing issue fix.

--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_UploadCaseDoc.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_UploadCaseDoc.cshtml
@@ -29,6 +29,7 @@
 <form id="create-form" method="post" asp-controller="CaseManage" asp-action="UploadCaseDocs" enctype="multipart/form-data">
     <input type="hidden" asp-for="CaseId" />
     <input type="hidden" asp-for="Where" />
+    <input type="hidden" asp-for="Reference" />
     <select style="display:none" id="dynamicdata"></select>
     <fieldset class="scheduler-border">
         <legend class="scheduler-border">Case Detail Information</legend>
@@ -62,28 +63,13 @@
                 </tr>
             </thead>
             <tbody>
-                @for (int i = 0; i < Model.Docs.Count(); i++)
+                @if (Model.Docs != null && Model.Docs.Count() > 0)
                 {
-                    <tr style="border: 1px solid #ddd;">
-                        <td style="border: 1px solid #ddd; padding: 8px;">@(i + 1)</td>
-                        <td style="border: 1px solid #ddd; padding: 8px;">@Model.Docs[i].DocType </td>
-                        <td style="border: 1px solid #ddd; padding: 8px;">@Model.Docs[i].DocDate</td>
-                        <td style="border: 1px solid #ddd; padding: 8px;">@Model.Docs[i].DocName</td>
-                        <td style="border: 1px solid #ddd; padding: 8px;">
-                            <p>
-                                <a href="@Model.Docs[i].DocFilePath" target="_blank">
-                                    <i style="font-size:20px" class="@Model.Docs[i].FIcon"></i>
-                                </a>
-                                @if (Model.Reference.ToLower() == "self")
-                                {
-                                    <a href="javascript:void(0);" onclick="ConfirmDelete('@Model.Docs[i].Id','@Model.Docs[i].DocFilePath')">
-                                        <i style="font-size:20px" class="fa">&#xf00d;</i>
-                                    </a>
-                                }
-                            </p>
-
-                        </td>
-                    </tr>
+                    <partial name="_CaseDocuments" model="Model.Docs"></partial>
+                }
+                else
+                {
+                    <tr><td colspan="4">There is no record found for this case!</td></tr>
                 }
             </tbody>
         </table>
@@ -111,143 +97,11 @@
             </div>
         </div>
     </fieldset>
+
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
         <button type="submit" class="btn btn-success">Save</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
-<script type="text/javascript" language=javascript>
+<script src="~/js/litigation/casedocuments.js"></script>
 
-    $(document).ready(function () {
-        BindType('dynamicdata');
-        console.log(typeof ConfirmDelete);
-        $(document).on("change", ".doctypechange", function () {
-            var id = $(this).attr('id').split("_")[1];
-            BindDocument('Documents_' + id + '__DocId', $("#Documents_" + id + "__TypeId").val());
-        });
-    });
-     function ConfirmDelete(DocId,fpath)
-        {
-            Swal.fire({
-            title: "Are you sure?",
-            text: "Do you want to delete the file: " + fpath + "?",
-            icon: "warning",
-            showCancelButton: true,
-            confirmButtonColor: "#d33",
-            cancelButtonColor: "#3085d6",
-            confirmButtonText: "Yes, delete it!"
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    deleteFile(DocId,fpath);
-                }
-            });
-        };
-
-     function deleteFile(fileId,fpath) {
-            fetch("/Litigation/CaseManage/DeleteDoc?id="+fileId+"&fPath="+fpath, {
-                method: 'POST'
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    Swal.fire("Deleted!", "Your file has been deleted.", "success")
-                        .then(() => location.reload());
-                } else {
-                    Swal.fire("Error!", "Something went wrong.", "error");
-                }
-            });
-        };
-
-    function removeKolom(id) {
-        debugger;
-        $(".removedoc_"+id).remove();
-    }
-    var incval = 0;
-    function defaultload(){
-        var content = '<tr class="removedoc_' + incval + '"><td><select class="form-control select2bs4 doctypechange" id="Documents_' + incval + '__TypeId" name="Documents[' + incval + '].TypeId">' +
-            '</select></td><td><select class="form-control select2bs4" id="Documents_' + incval + '__DocId" name="Documents[' + incval + '].DocId">' +
-            '</select></td><td><input type="date" id="OrderDate_' + incval + '__DocDate" name="Documents[' + incval + '].DocDate" class="form-control" /></td><td><input type="file" name="Documents[' + incval + '].Document" id="Documents_' + incval + '__Document" width="300px" placeholder="Enter court/Bench adress" class="form-control" /></td><td><button class="add-btn-repeat btn btn-success" id="btnDraft" onclick="addElement()" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button> </td></tr>';
-        $('#tblDocs tbody').append(content);
-        var data = $("#dynamicdata").html();
-        $("#Documents_" + incval + "__TypeId").html(data)
-        $("#Documents_" + incval + "__TypeId").select2({
-            placeholder: "Select a type",
-            theme: "bootstrap4",
-            escapeMarkup: function (m) {
-                return m;
-            }
-        });
-        incval++;
-    }
-    function validation(){
-        var count = incval - 1;
-        var type = $("#Documents_" + count + "__TypeId").val();
-        var doc = $("#Documents_" + count + "__DocId").val();
-        var imgv = $("#Documents_" + count + "__Document").val();
-        if (type == "" || doc == "" || imgv=="") {
-            return false;
-        }
-         return true;
-    }
-    function addElement(e) {
-        var vald = validation();
-        if (vald==true) {
-            var content = '<tr class="removedoc_' + incval + '"><td><select class="form-control select2bs4 doctypechange" id="Documents_' + incval + '__TypeId" name="Documents[' + incval + '].TypeId">' +
-                '</select></td><td><select class="form-control select2bs4" id="Documents_' + incval + '__DocId" name="Documents[' + incval + '].DocId">' +
-                '</select></td><td><input type="date" id="OrderDate_' + incval + '__DocDate" name="Documents[' + incval + '].DocDate" class="form-control" /></td><td><input type="file" name="Documents[' + incval + '].Document" id="Documents_' + incval + '__Document" width="300px" placeholder="Enter court/Bench adress" class="form-control" /></td><td> <button type="button" onclick="removeKolom(' + incval + ')" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button></td></tr>';
-            $('#tblDocs tbody').append(content);
-            var data = $("#dynamicdata").html();
-            $("#Documents_" + incval + "__TypeId").html(data)
-            $("#Documents_" + incval + "__TypeId").select2({
-                placeholder: "Select a type",
-                theme: "bootstrap4",
-                escapeMarkup: function (m) {
-                    return m;
-                }
-            });
-            $("#Documents_" + incval + "__DocId").select2({
-                placeholder: "Select a document",
-                theme: "bootstrap4",
-                escapeMarkup: function (m) {
-                    return m;
-                }
-            });
-            incval++;
-        } else {
-            alert("Please select all the fileds are required");
-        }
-    }
-
-    function BindType(ddl) {
-        $.getJSON("/Litigation/casemanage/DOCTypes", function (data) {
-            $("#" + ddl).empty();;
-            $.each(data, function (key, value) {
-                $("#" + ddl).append(`<option /><option value="${key}">${value}</option>`);
-            });
-            defaultload();
-        });
-        // $("#" + ddl).select2({
-        //     placeholder: "Select a type",
-        //     theme: "bootstrap4",
-        //     escapeMarkup: function (m) {
-        //         return m;
-        //     }
-        // });
-
-    }
-    function BindDocument(ddl,v) {
-        $("#" + ddl).empty();
-        $.getJSON("/Litigation/casemanage/DdlDOTypes?TypeId=" + v, function (data) {
-            $.each(data.Data, function (i, item) {
-                $("#" + ddl).append(`<option /><option value="${item.Id}">${item.Name_En}</option>`);
-            });
-        });
-        $("#" + ddl).select2({
-            placeholder: "Select a document",
-            theme: "bootstrap4",
-            escapeMarkup: function (m) {
-                return m;
-            }
-        });
-    }
-</script>
