--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_ViewAll.cshtml
@@ -83,7 +83,7 @@
         $(document).ready(function () {
             debugger;
         $("#tblProceedingSHead").DataTable({
-            "processing": true,
+            "processing": false,
             "serverSide": true,
             "ajax": {
                 "url": "/LawyerDiary/ProceedingSubHead/LoadAll", // Your server-side endpoint
