--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_Create.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Note"] = localizer["All (*) marked fields are mandatory!"];
+    ViewData["Note"] = @localizer["All (*) marked fields are mandatory!"];
 }
 <style>
     .div_hide {
@@ -25,15 +25,10 @@
     }
 </style>
 @model CourtDistrictViewModel
-<form id="create-form" method="post" asp-controller="CourtDistrict" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
-    <div class="row">        
+<form id="create-form" method="post" asp-controller="CourtDistrict" asp-action="OnPostCreateOrEdit"
+      asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
+    <div class="row">
         <div class="col-md-12">
-            @if (@Model.Message != null)
-            {
-                <div class="form-group row">
-                    <partial name="_StatusMessage" model="@Model.Message" />
-                </div>
-            }
             <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["State"]</label>
                 <div class="col-md-9">
@@ -58,8 +53,8 @@
                         </thead>
                         <tbody class="data-repeater">
                             <tr class="kolom">
-                                <td><input type="text" asp-for="CourtDistricts[0].Name_En" width="300px" placeholder="Please enter case type (english)" class="form-control"/></td>
-                                <td><input type="text" asp-for="CourtDistricts[0].Name_Hn" width="300px" placeholder="Please enter case type (hindi)" class="form-control"/></td>
+                                <td><input type="text" asp-for="@Model.CourtDistricts[0].Name_En" width="300px" placeholder="Please enter case type (english)" class="form-control" /></td>
+                                <td><input type="text" asp-for="@Model.CourtDistricts[0].Name_Hn" width="300px" placeholder="Please enter case type (hindi)" class="form-control" /></td>
                                 <td class="btn-repeater">
                                     <button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
                                 </td>
@@ -68,46 +63,7 @@
                     </table>
                 </fieldset>
             </div>
-            @* <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["District"]</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <select class="form-control select2bs4" asp-for="DistrictId"
-                                asp-items="@Model.Districts">
-                            <option></option>
-                        </select>
-                    </div>
-                    <span asp-validation-for="DistrictId" class="text-danger"></span>
-                </div>
-            </div> *@
 
-            @* <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Name (En)"]</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <input type="text" placeholder="Please enter name (En)" asp-for="Name_En" name="Name_En" id="Name_En" class="form-control" />
-                    </div>
-                    <span asp-validation-for="Name_En" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Name (Hn)"]</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <input type="text" placeholder="Please enter name (Hn)" asp-for="Name_Hn" name="Name_Hn" id="Name_Hn" class="form-control" />
-                    </div>
-                    <span asp-validation-for="Name_Hn" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Abbreviation"]</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <input type="text" placeholder="Please enter Abbreviation" asp-for="Abbreviation" name="Abbreviation" id="Name_Hn" class="form-control" />
-                    </div>
-                    <span asp-validation-for="Abbreviation" class="text-danger"></span>
-                </div>
-            </div> *@
             <div class="form-group row">
                 <div class="col-md-3">
                 </div>
@@ -116,11 +72,14 @@
     </div>
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
+        @{
+            string btnText = Model.Id != Guid.Empty ? "Update" : "Save";
+        }
+        <button type="submit" class="btn btn-success">@btnText</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
-<script type="text/javascript" language=javascript>
+<script type="text/javascript" language=javascript>   
     $.validator.unobtrusive.parse(document);
     $("#StateId").select2({
         placeholder: "Select a state",
@@ -129,7 +88,7 @@
             return m;
         }
     });
-    
+
     $("#StateId").on("change", function () {
         $("#DistrictId").empty();
         $.getJSON("/LawyerDiary/CourtDistrict/LoadDistricts?StateCode=" + $("#StateId").val(), function (data) {
@@ -138,7 +97,7 @@
             });
         });
     });
-    
+
      var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
     var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
 
@@ -146,8 +105,7 @@
          e.parents('.kolom').remove();
      }
 
-    function addElement(e) {    
-        debugger;
+    function addElement(e) {
         var trlength = $('#tblCdistrict tbody tr').length;
         if (validateNameEn()) {
         var clonedRow = $('#tblCdistrict tbody tr:last').clone();
@@ -161,7 +119,7 @@
                 NameAtr = "CourtDistricts[" + trlength + "].Name_Hn";
                 IdAtr = "CourtDistricts_" + trlength + "__Name_Hn";
             }
-            
+
             $(this).attr('name', NameAtr).attr('id', IdAtr);
         });
         clonedRow.find('button').find('button').replaceWith(btn_add);
