--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_Edit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_Edit.cshtml
@@ -64,7 +64,7 @@
     </div>
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
+        <button type="submit" class="btn btn-success">Update</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
