--- a/CourtApp.Web/Areas/LawyerDiary/Views/DOType/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/DOType/Index.cshtml
@@ -1,15 +1,15 @@
-﻿﻿@{
+﻿@{
     ViewData["Title"] = localizer["Draft & Orders"];
     ViewData["Caption"] = localizer["Manage Draft & Order here"];
 }
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
-        @if ((AuthorizationService.AuthorizeAsync(User, Permissions.CaseDrafting.Create)).Result.Succeeded)
-        {
-            <a onclick="jQueryModalGet('/lawyerdiary/DOType/OnGetCreateOrEdit','Create Draft & Order Type')" class="btn bg-success">
-                <i class="fa fa-plus-square"></i> Create
-            </a>
-        }
+        @* @if ((AuthorizationService.AuthorizeAsync(User, Permissions.CaseDrafting.Create)).Result.Succeeded)
+        { *@
+        <a onclick="jQueryModalGet('/lawyerdiary/DOType/OnGetCreateOrEdit','Create Draft & Order Type')" class="btn bg-success">
+            <i class="fa fa-plus-square"></i> Create
+        </a>
+        @*  } *@
 
         <a id="reload" class="btn btn-primary text-white">
             <i class="fa fas fa-bolt"></i>
@@ -23,7 +23,7 @@
 {
     <script src="~/js/site.js"></script>
     <script>
-        $(document).ready(function () {           
+        $(document).ready(function () {
             loadData();
             $('#reload').on('click', function () {
                 loadData();
