--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingHead/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingHead/Index.cshtml
@@ -5,12 +5,12 @@
 @model ProceedingHeadViewModel
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
-        @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Create)).Result.Succeeded)
-        {
+        @* @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Create)).Result.Succeeded)
+        { *@
             <a onclick="jQueryModalGet('/lawyerdiary/ProceedingHead/OnGetCreateOrEdit','Create Proceeding Head')" class="btn bg-success">
                 <i class="fa fa-plus-square"></i> Create
             </a>
-        }
+        @* } *@
 
         <a id="reload" class="btn btn-primary text-white">
             <i class="fa fas fa-bolt"></i>
