--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingHead/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingHead/_ViewAll.cshtml
@@ -5,11 +5,11 @@
             <th>Name(En)</th>
             <th>Name(Hn)</th>
             <th>Abbreviation</th>
-            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Delete)).Result.Succeeded
+            @* @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Delete)).Result.Succeeded
             || (AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Edit)).Result.Succeeded)
-            {
+            { *@
                 <th>Actions</th>
-            }
+            @* } *@
         </tr>
     </thead>
     <tbody>
@@ -26,33 +26,33 @@
                 <td>
                     @bt.Abbreviation
                 </td>
-                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Delete)).Result.Succeeded ||
+                @* @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Delete)).Result.Succeeded ||
                (AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Edit)).Result.Succeeded)
-                {
+                { *@
                     <td text-right">
                         <div class="btn-group">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Action
                             </button>
                             <div class="dropdown-menu shadow animated--grow-in">
-                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Edit)).Result.Succeeded)
-                                {
+                                @* @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Edit)).Result.Succeeded)
+                                { *@
                                     <a onclick="jQueryModalGet('/LawyerDiary/ProceedingHead/OnGetCreateOrEdit?id=@bt.Id','Edit Proceeding Head Type')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
 
-                                }
+                               @*  }
                                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.ProceedingHeads.Delete)).Result.Succeeded)
-                                {
+                                { *@
                                     <form id="form_delete_@bt.Id" asp-area="LawyerDiary"
                                           asp-controller="ProceedingHead" method="post" asp-action="OnPostDelete"
                                           asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
                                         <a href="javascript:$('#form_delete_@bt.Id').submit();"
                                            class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
                                     </form>
-                                }
+                                @* } *@
                             </div>
                         </div>
                     </td>
-                }
+                @* } *@
             </tr>
         }
     </tbody>
