--- a/CourtApp.Web/Areas/LawyerDiary/Views/Title/_CreateUpdateFSTitle.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/Title/_CreateUpdateFSTitle.cshtml
@@ -6,7 +6,8 @@
                 <label class="col-md-3 col-form-label">@localizer["Type"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select class="form-control select2bs4" asp-for="TypeId" asp-items="@Model.FSTypes">
+                        <select class="form-control select2bs4" asp-for="TypeId" 
+                        asp-items="@Model.FSTypes">
                             <option></option>
                         </select>
                     </div>
@@ -18,8 +19,11 @@
                 <label class="col-md-3 col-form-label">@localizer["Name"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                       <input type="text" class="form-control" placeholder="Please enter type" asp-for="Name_En" />
+                       <input type="text" class="form-control" 
+                       placeholder="Please enter type" 
+                       asp-for="Name_En" />
                     </div>
+                    <span asp-validation-for="Name_En" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -38,7 +42,10 @@
     </div>
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
+        @{
+            string btnText = Model.Id != Guid.Empty ? "Update" : "Save";
+        }
+        <button type="submit" class="btn btn-success">@btnText</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
