--- a/CourtApp.Web/Areas/LawyerDiary/Views/TypeOfCases/_Create.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/TypeOfCases/_Create.cshtml
@@ -22,21 +22,19 @@
         border-bottom: none;
     }
 </style>
-<form id="create-form" method="post" asp-controller="Typeofcases" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
-    @* <partial name="_StatusMessage" model="@Model.Message" /> *@
+
+<form id="create-form" method="post" asp-controller="Typeofcases"
+      asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id"
+      onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-12">
-            @if (Model.Message != null)
-            {
-                <div class="form-group row">
-                    <partial name="_StatusMessage" model="@Model.Message" />
-                </div>
-            }
             <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Court Type"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select name="CourtTypeId" class="form-control select2bs4" id="CourtTypeId" asp-for="CourtTypeId" placeholder="Select Court Type" asp-items="@Model.CourtTypes">
+                        <select name="CourtTypeId" class="form-control select2bs4" id="CourtTypeId" 
+                        asp-for="CourtTypeId" placeholder="Select Court Type" 
+                        asp-items="@Model.CourtTypes">
                             <option></option>
                         </select>
                     </div>
@@ -48,7 +46,9 @@
                 <label class="col-md-3 col-form-label">@localizer["Case Category"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select name="NatureId" class="form-control select2bs4" id="CaseNatureId" asp-for="NatureId" asp-items="@Model.CaseNatures">
+                        <select name="NatureId" class="form-control select2bs4" id="CaseNatureId" 
+                        asp-for="NatureId" 
+                        asp-items="@Model.CaseNatures">
                             <option></option>
                         </select>
                     </div>
@@ -70,7 +70,10 @@
                         </thead>
                         <tbody class="data-repeater">
                             <tr class="kolom">
-                                <td><input type="text" asp-for="CaseTypes[0].Name_En" width="300px" placeholder="Please enter case type (english)" class="form-control" /></td>
+                                <td>
+                                    <input type="text" asp-for="CaseTypes[0].Name_En" width="300px" placeholder="Please enter case type (english)" class="form-control" />
+                                    <span asp-validation-for="CaseTypes[0].Name_En" class="text-danger"></span>
+                                </td>
                                 <td><input type="text" asp-for="CaseTypes[0].Name_Hn" width="300px" placeholder="Please enter case type (hindi)" class="form-control" /></td>
                                 <td><input type="text" asp-for="CaseTypes[0].Abbreviation" width="300px" placeholder="Please enter case type abbreviation" class="form-control" /></td>
                                 <td class="btn-repeater">
@@ -81,31 +84,6 @@
                     </table>
                 </fieldset>
             </div>
-
-            @* <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Case Type (En)"]</label>
-                <div class="col-md-9">
-                    <input type="text" asp-for="Name_En" name="Name_En" class="form-control">
-                    <span asp-validation-for="Name_En" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Case Type (Hn)"]</label>
-                <div class="col-md-9">
-                    <input type="text" asp-for="Name_Hn" name="Name_Hn" class="form-control">
-                    <span asp-validation-for="Name_Hn" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Abbreviation"]</label>
-                <div class="col-md-9">
-                    <input type="text" asp-for="Abbreviation" name="Abbreviation" class="form-control">
-                    <span asp-validation-for="Abbreviation" class="text-danger"></span>
-                </div>
-            </div> *@
-
             <div class="form-group row">
                 <div class="col-md-3">
                 </div>
@@ -114,7 +92,10 @@
     </div>
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
+        @{
+            string btnText = Model.Id != Guid.Empty ? "Update" : "Save";
+        }
+        <button type="submit" class="btn btn-success">@btnText</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
@@ -157,7 +138,6 @@
      }
 
     function addElement(e) {
-        debugger;
         var trlength = $('#tblCasetype tbody tr').length;
         if (validateNameEn()) {
         var clonedRow = $('#tblCasetype tbody tr:last').clone();
