--- a/CourtApp.Web/Views/Shared/_StatusMessage.cshtml
+++ b/CourtApp.Web/Views/Shared/_StatusMessage.cshtml
@@ -1,12 +1,12 @@
 @model string
-
 @if (!String.IsNullOrEmpty(Model))
 {
     var statusMessageClass = Model.StartsWith("Error") ? "danger" : "success";
+    var fnlMessage = Model.Replace("Error!", "");
     <div class="alert alert-@statusMessageClass alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span >&times;</span>
+            <span>&times;</span>
         </button>
-        @Model
+        @fnlMessage
     </div>
 }
