--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_WohDateCases.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_WohDateCases.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<GetCaseInfoViewModel>
 @{
-    ViewData["Title"] = localizer["User Case List Without Hearing Date"];
+    ViewData["Title"] = localizer["Case List Without Next Date"];
     ViewData["Caption"] = localizer["You can fill hearing date from here"];
     ViewData["Note"] = localizer["All (*) marked date will default today date. There is no next date present in database "];
 }
