--- a/CourtApp.Web/Areas/Report/Views/Register/OtherRegister.cshtml
+++ b/CourtApp.Web/Areas/Report/Views/Register/OtherRegister.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = localizer["Other Register"];
+    ViewData["Title"] = localizer["Compliance Done Register"];
 }
 
 <div class="card">
